Fix wave being cut off on smaller screens

--- a/src/stylesheets/components/common/_wave.scss
+++ b/src/stylesheets/components/common/_wave.scss
@@ -1,6 +1,7 @@
 .dd-wave {
 	pointer-events: none;
 	height: 20vh;
+	min-height: 200px;
 	width: 100%;
 	position: absolute;
 	left: -0px;
